Fixed the alignment of the tables

--- a/psicquic-view/src/main/webapp/skins/colours/imex-colours.css
+++ b/psicquic-view/src/main/webapp/skins/colours/imex-colours.css
@@ -303,3 +303,7 @@ span.searchterm:hover {
     width: 90%;
     display: block;
 }
+
+table.servicesResultTable {
+    width: auto;
+}
